<?xml version="1.0" encoding="utf-8"?>

<resources>
    <string name="app_name">Rick and Morty</string>

    <!--Login-->
    <string name="login">Login</string>
    <string name="register">Create new account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="version_param">V. %1$s</string>
    <string name="version">V. 1.0.0</string>
    <string name="empty_email_error">Email is empty</string>
    <string name="invalid_email_error">Email is invalid</string>
    <string name="empty_password_error">Password is empty</string>
    <string name="wrong_password">Wrong password</string>

    <!--Register-->
    <string name="confirm_password">Confirm password</string>
    <string name="password_requirements">*Must be at least 5 characters long</string>
    <string name="passwords_match_error">Passwords does not match</string>
    <string name="password_long_error">Password must be at least 5 characters long</string>

    <!--Fragment Home-->
    <string name="name">Name</string>
    <string name="birthday_date">Birthday date</string>
    <string name="address">Address</string>
    <string name="phone_number">Phone number</string>
    <string name="hobbies">Hobbies</string>
    <string name="optional">Optional</string>
    <string name="add_people">Add people</string>

    <!--Fragment Characters-->
    <string name="search">Search</string>
    <string name="camera_icon">Camera icon</string>
    <string name="register_new_account">Register new account</string>
    <string name="search_character">Search character</string>
    <string name="retry">Retry</string>
    <string name="return_to_top">Return to top</string>
    <string name="online_characters">Online Characters</string>
    <string name="my_characters">My Characters</string>

    <!--Menus-->
    <string name="characters">Characters</string>
    <string name="episodes">Episodes</string>
    <string name="locations">Locations</string>
    <string name="profile">Profile</string>
    <string name="search_another">Search Another</string>
    <string name="more">More</string>

    <!--Character Item-->
    <string name="character_image">Character image</string>
    <string name="status_indicator">Status indicator</string>
    <string name="item_description_param">%s - %s</string>

    <!--Character Details-->
    <string name="location">Location</string>
    <string name="species">Species</string>
    <string name="origin">Origin</string>
    <string name="gender">Gender</string>

    <!--Error Messages-->
    <string name="user_already_exist">User already exist</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>